css/styles.css
.calculator {
    padding: 10px;
    height: 380px;
    width: 400px;
    margin: 30px auto;
    background-color: 15133C;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

.display {
    background-color: 73777B;
    border: solid whitesmoke 0.5px;
    color: black;
    border-radius: 5px;
    width: 218%;
    height: 75%;
}

#btn {
    background-color: #EC994B;
}

.divide, .plus_minus, .minus, .plus {
    position: absolute;
    margin: 10px 3px;
}

.multiply {
    position: absolute;
    margin: 11px 5px;
}

.square_root {
    font: FontAwesome;
    position: absolute;
}

.mortgage {
    position: absolute;
    margin: 3px 6.5px;
}

.temperature {
    position: absolute;
    margin: 3px 10px;
}

input[type=button] {
    font-family: 'Orbitron', sans-serif;
    font-size: medium;
    width: 100%;
    height: 70%;
    background-color: #F1EEE9;
    border: solid black 0.5px;
    border-radius: 5px;
    outline: none;
}

input:active[type=button] {
    background: #EC994B;
    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
    box-shadow: inset 0px 0px 5px #c1c1c1;
}

#mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
    width: 20%;
    margin: auto auto;
}

/* p {
    border: 2px solid green ;
    width: 100%;
    height: 8%;
    width: 25%;
    text-align: right;
    margin: 20px auto;
}

i {
    height: 18px;
}

.sq_root {
    height: 18px;
    margin: 0 auto 0;
}

.row_1 {
    width: 25%;
    margin: -21px auto;
}

.row_2 {
    width: 25%;
    margin: 19px auto 0;
}

.row_3 {
    width: 25%;
    margin: -2px auto 0;
}

.row_4 {
    width: 25%;
    margin: -4px auto 0;
}

.button {
    border: 1px solid black;
    display: inline-block;
    zoom: 1;
    width: 16.9%;
    text-align: center;
    padding: 5px;
} */

